<resources>
    <string name="app_name" translatable="false">CVOR</string>
    <string name="app_action">What would you like to do?</string>
    <string name="suggested_actions">Suggested Actions</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="help_section">Help section</string>
    <string name="whatsnew">Whats New</string>
    <string name="share_history">Secure Share history</string>
    <string name="share_history_body">Below is the history of all the files you have securely shared via CVOR. You can filter the history below.</string>
    <string name="add_watermark_button">Add Watermark</string>
    <string name="smart_share_button">Secure share</string>
    <string name="share_file_button">Share file</string>
    <string name="combine_pdfs_button">Combine</string>
    <string name="convert_to_pdf_button">Convert</string>
    <string name="scan_to_pdf_button">Scan to PDF</string>
    <string name="split_pdf_button">Split</string>
    <string name="compress_pdf_button">Compress</string>
    <string name="cancel_button">Cancel</string>
    <string name="done_button">Done</string>
    <string name="log_share_button">Log share</string>
    <string name="back_button">Back</string>
    <string name="preview_button">Preview</string>
    <string name="share_button">Share</string>
    <string name="share_again_button">Share again</string>
    <string name="app_review_text_button">Review</string>
    <string name="message_us_button">Message us</string>
    <string name="remove">Remove</string>
    <string name="camera_source">Camera</string>
    <string name="flash_toggle">Flash ON</string>
    <string name="capture_image">Take Photo</string>
    <string name="retake_image">Retake the photo</string>
    <string name="confirm_image">Confirm photo</string>
    <string name="camera_preview">Camera preview</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="camera_init_failed">Camera initialisation failed</string>
    <string name="image_capture_failed">Image capture failed</string>
    <string name="no_image_to_confirm">No image to confirm</string>
    <string name="image_save_failed">Image failed to save</string>
    <string name="camera_not_ready">Camera not ready</string>
    <string name="capture_more_images">Capture more images?</string>
    <string name="captured_image">Captured image</string>
    <string name="select_pdfs">Upload PDF documents</string>
    <string name="select_images">Upload images</string>
    <string name="file_manager_fragment_title">Review files</string>
    <string name="file_name">File Name</string>
    <string name="sharing_with">Sharing with?</string>
    <string name="purpose">Purpose? (optional)</string>
    <string name="share_title">Share</string>
    <string name="share_app_text">Select the app to share</string>
    <string name="share_app_icon_desc">App available to share the files</string>
    <string name="share_text">Hi! Here is the file you requested. Shared securely via CVOR!</string>
    <string name="sharehistory_hint">Search by file name, shared with or purpose</string>
    <string name="refer_message">Check out CVOR - A secure way to share your data: https://www.google.com</string>
    <string name="refer_prompt">Help us spread the word! Refer CVOR to your friends and family ❤️</string>
    <string name="refer">Refer</string>
    <string name="share_via">Share via</string>
    <string name="text_watermark">Shared with %1$s for %2$s on %3$s</string>
    <string name="text_general_purposes">General purposes</string>
    <string name="pdf_tools">PDF tools</string>
    <string name="combine_pdf">Combine PDF</string>
    <string name="convert_to_pdf">Convert images to PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="compress_pdf">Compress PDF</string>
    <string name="compress_quality">Post compression file size (select one): </string>
    <string name="pre_compress_file_size">Current file size: %1s</string>
    <string name="compress_high">High: %s</string>
    <string name="compress_medium">Medium: %s</string>
    <string name="compress_low">Low: %s</string>
    <string name="file_review_prompt">Hold and drag files to reorder them</string>
    <string name="filename_change_prompt">Enter new file name</string>
    <string name="filename_change_check">File name required!</string>
    <string name="custom_file_name">Change file name</string>
    <string name="change">Change</string>
    <string name="password_prompt">Enter password for: %s</string>
    <string name="permission_required_message">Applicable permission is required to use the feature.</string>
    <string name="from_date_picker">From</string>
    <string name="to_date_picker">To</string>
    <string name="filter_dropdown">Filters ▼</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="loading">Loading, please wait!</string>
    <string name="add_favourite_prompt">Add this to Favourites?</string>
    <string name="input_field">Input field</string>
    <string name="camera_icon_desc">Camera icon</string>
    <string name="image_picker_icon_desc">Image picker icon</string>
    <string name="pdf_picker_icon_desc">PDF picker icon</string>
    <string name="delete_icon">Delete icon</string>
    <string name="pdf_icon">PDF icon</string>
    <string name="image_icon">Image icon</string>
    <string name="download_icon">Download files</string>
    <string name="preview_desc">Preview of processed file</string>
    <string name="preview_fragment_title">Preview</string>
    <string name="no_files_selected">No files selected.</string>
    <string name="preview_prompt">
       • Swipe left or up to view.\n
       • Double tap to zoom. \n
   </string>
    <string name="grid_watermark_check">Grid style layout</string>
    <string name="single_watermark_check">Single</string>
    <string name="opacity_text">Transparency: %d</string>
    <string name="fontsize_text">Font size: %d</string>
    <string name="smart_text_preview">Text preview</string>
    <string name="help_1">Sharing With</string>
    <string name="help_ans_1">"Sharing With" refers to the organisation or individual you are sharing your data with.</string>
    <string name="help_2">Purpose</string>
    <string name="help_ans_2">The "Purpose" field allows you to briefly add a reason or description for sharing the document, eg. hotel booking ref, account opening, etc.</string>
    <string name="help_3">Transparency</string>
    <string name="help_ans_3">"Transparency" allows you to adjust the lightness of the text in the document.</string>
    <string name="help_4">Font Size?</string>
    <string name="help_ans_4">"Font Size" lets you adjust the size of the text in the document.</string>
    <string name="help_5">Grid Style</string>
    <string name="help_ans_5">"Grid Style" determines whether the text repeats across the document. If unchecked, it will show once.</string>
    <string name="help_6">Position</string>
    <string name="help_ans_6">"Position" lets you adjust the position of the text in the document.</string>
    <string name="help_7">Text Preview</string>
    <string name="help_ans_7">"Text Preview" shows a preview of the text that will be applied to the file.</string>
    <string name="pdf_combine_error">File could not be processed. Try compressing it to reduce size and try again.</string>
    <string name="compression_failed">Error: Compression failed</string>
    <string name="compression_quality_error">Select compression quality</string>
    <string name="navigation_failed">Navigation failed</string>
    <string name="unable_to_determine_file_name">Unable to determine file name</string>
    <string name="failed_to_crop_image">Failed to crop image</string>
    <string name="failed_to_process_cropped_image">Failed to process cropped image</string>
    <string name="multi_files_selected">%s files selected</string>
    <string name="one_file_selected">1 file selected</string>
    <string name="file_selection_cancelled">File selection cancelled</string>
    <string name="no_images_selected">No images selected</string>
    <string name="invalid_file_source_type">Invalid file source type</string>
    <string name="source_type_not_set">Source type not set</string>
    <string name="split_file_limit_warning">Only files with less than 25 pages currently supported.</string>
    <string name="multi_file_selection">Long press to select multiple files.</string>
    <string name="failed_to_process_selected_file">Failed to process the selected file</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="password_protected_files_not_supported">Password protected files are not supported for favourites.</string>
    <string name="password_entry_cancelled">Password entry cancelled.</string>
    <string name="failed_to_open_document">Failed to open document. It may be corrupted or unsupported.</string>
    <string name="opening">Opening: </string>
    <string name="failed_to_rename_file">Failed to rename file. Please try again.</string>
    <string name="no_files_selected_go_back">No files selected. Go back to select a file.</string>
    <string name="split_file_limit_error">PDF exceeds the 25-page limit.</string>
    <string name="incorrect_password_error"> "Incorrect password. Please try again."</string>
    <string name="error_processing_files">Error processing files: </string>
    <string name="pdf_action_completed">PDF Action completed.</string>
    <string name="no_compression_quality_selected">No compression quality selected.</string>
    <string name="compression_type_set">Compression type set: </string>
    <string name="no_files_available_to_download">No files available to download</string>
    <string name="downloading_files">Downloading files…</string>
    <string name="failed_to_download">Failed to download: </string>
    <string name="download_completed">Download completed. Check your Downloads folder.</string>
    <string name="watermarking_completed">Watermarking completed.</string>
    <string name="no_files_watermarked">No files were watermarked.</string>
    <string name="error_during_watermarking">An error occurred during watermarking. Try again.</string>
    <string name="features_heading">App features</string>
    <string name="features_body">
        &#8226;  Secure share - Add secure text to images and PDFs when sharing your important files to prevent misuse.\n
        &#8226;  Scan documents to PDF with enhanced preview and sharing options.\n
        &#8226;  Compress, combine, split, and convert images to PDFs effortlessly.\n
        &#8226;  Mark frequently used files as favourites for quick usage.\n
        &#8226;  Keep track of your important shared files via the Secure share history.\n
        &#8226;  Add secure text in your device language; checkout cvor.io for a list of the supported languages.\n
    </string>
    <string name="faq_heading">FAQs</string>
    <string name="faq_collapse">Expands and collapses the FAQ section</string>
    <string name="message_us_prompt">Have more questions or suggestions or want to report a bug?</string>
    <string name="email_body">Please describe your issue or suggestions here.</string>
    <string name="no_email_app_found">Unable to launch email app. You can email us directly on cvorapp.io@gmail.com.</string>
    <string name="review_prompt">Enjoying the app? Your review helps us improve! ❤️</string>
    <string name="review_button">Review</string>
    <string name="later_button">Later</string>
    <string name="cancel_reminder_button">Stop reminder</string>
    <string name="faq_1">Is my data safe?</string>
</resources>