<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_nav_ripple">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_share_history"
        android:title="@string/share_history"
        android:icon="@drawable/baseline_history_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_help"
        android:title="@string/help_section"
        android:icon="@drawable/baseline_help_24"
        app:showAsAction="ifRoom"/>

    <!-- <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"/> -->

    <item
        android:id="@+id/nav_refer"
        android:title="@string/refer"
        android:icon="@drawable/baseline_group_add_24"
        app:showAsAction="ifRoom"/>

</menu>
