<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">

    <ImageView
        android:id="@+id/file_type_image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:backgroundTint="@color/transparent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/pdf_icon"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/file_name_text_view"
        style="@style/TextStyle.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_vertical"
        android:text="@string/file_name"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        android:backgroundTint="@color/transparent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/delete_icon" />
</LinearLayout>
