<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/fragment2Background"
    android:padding="8dp">

    <TextView
        android:id="@+id/option_watermark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/smart_share_button"
        android:textColor="@color/text"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/borderColor" />

    <TextView
        android:id="@+id/option_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/text"
        android:text="@string/share_file_button"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/borderColor" />

    <TextView
        android:id="@+id/option_custom_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/text"
        android:text="@string/custom_file_name"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/borderColor" />

    <TextView
        android:id="@+id/option_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/remove"
        android:textColor="@color/text"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground" />
</LinearLayout>
