<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Camera Option -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="2dp"
        android:filterTouchesWhenObscured="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/camera_icon_desc"
                android:src="@drawable/baseline_camera_alt_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/camera_source"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Image Picker Option -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_image_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="2dp"
        android:filterTouchesWhenObscured="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_image_24"
                android:contentDescription="@string/image_picker_icon_desc"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_images"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/poppins" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- PDF Picker Option -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/option_PDF_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="2dp"
        android:filterTouchesWhenObscured="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_pdf"
                android:contentDescription="@string/pdf_picker_icon_desc"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_pdfs"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:fontFamily="@font/poppins" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
