<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_primary"
    android:paddingTop="50dp">

    <!-- Title Container -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.2"
        android:text="@string/app_name"
        android:textColor="@color/text"
        style="@style/TextStyle.Headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Subtle Divider -->
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/shadow"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Button Grid Container -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/btn_share_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Prompt Container -->
        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_action"
            android:paddingBottom="30dp"
            android:letterSpacing="0.08"
            style="@style/TextStyle.SubTitle"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:weightSum="2">

            <!-- Add Watermark Button -->
            <Button
                android:id="@+id/btn_add_watermark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/add_watermark_button"
                style="@style/TextStyle.Body"
                android:paddingTop="15dp"
                app:icon="@drawable/baseline_secure_add_24"
                app:iconGravity="top"
                app:iconPadding="15dp"
                app:iconSize="28dp"
                android:elevation="6dp"
                app:cornerRadius="16dp"
                android:layout_margin="5dp"
                app:rippleColor="@color/rippleEffect" />

            <!-- Convert Images to PDF Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_convert_to_pdf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/convert_to_pdf"
                style="@style/TextStyle.Body"
                android:paddingTop="15dp"
                app:icon="@drawable/baseline_document_scanner_24"
                app:iconGravity="top"
                app:iconPadding="20dp"
                app:iconSize="28dp"
                android:elevation="6dp"
                app:cornerRadius="16dp"
                android:layout_margin="5dp"
                app:rippleColor="@color/rippleEffect" />

            <!-- Share File Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/share_file_button"
                android:visibility="gone"
                style="@style/TextStyle.Body"
                android:paddingTop="15dp"
                app:icon="@drawable/baseline_share_24"
                app:iconGravity="top"
                app:iconPadding="20dp"
                app:iconSize="28dp"
                android:elevation="6dp"
                app:cornerRadius="16dp"
                android:layout_margin="5dp"
                app:rippleColor="@color/rippleEffect" />

            <!-- Combine PDFs Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_combine_pdfs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/combine_pdf"
                style="@style/TextStyle.Body"
                android:paddingTop="15dp"
                app:icon="@drawable/baseline_merge_24"
                app:iconGravity="top"
                app:iconPadding="20dp"
                app:iconSize="28dp"
                android:elevation="6dp"
                app:cornerRadius="16dp"
                android:layout_margin="5dp"
                app:rippleColor="@color/rippleEffect" />

            <!-- Split PDF Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_split_pdf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/split_pdf"
                style="@style/TextStyle.Body"
                android:paddingTop="15dp"
                app:icon="@drawable/baseline_vertical_split_24"
                app:iconGravity="top"
                app:iconPadding="20dp"
                app:iconSize="28dp"
                android:elevation="6dp"
                app:cornerRadius="16dp"
                android:layout_margin="5dp"
                app:rippleColor="@color/rippleEffect" />

            <!-- Compress PDF Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_compress_pdf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/compress_pdf"
                style="@style/TextStyle.Body"
                android:paddingTop="15dp"
                app:icon="@drawable/baseline_compress_24"
                app:iconGravity="top"
                app:iconPadding="20dp"
                app:iconSize="28dp"
                android:elevation="6dp"
                app:cornerRadius="16dp"
                android:layout_margin="5dp"
                app:rippleColor="@color/rippleEffect" />
        </GridLayout>
    </LinearLayout>

    <!-- Share History Container -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_history"
        android:visibility="gone"
        style="@style/TextStyle.Body"
        android:gravity="center_vertical"
        android:textAllCaps="false"
        android:elevation="6dp"
        app:cornerRadius="16dp"
        app:rippleColor="@color/rippleEffect"
        android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/baseline_history_24"
        app:iconGravity="end"
        app:iconPadding="5dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/gradient_secondary"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        android:visibility="visible"
        app:itemBackground="@drawable/bottom_nav_item_background"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
